added tests for PointRepository, FunctionRepository, FunctionService